# mimosa

./: .gitignore  README.md  pyproject.toml
analysis/data/2024-12-16-00_00_2024-12-16-23_59_Sentinel-2_L2A/: 2024-12-16-00:00_2024-12-16-23:59_Sentinel-2_L2A_B01_(Raw).tiff  2024-12-16-00:00_2024-12-16-23:59_Sentinel-2_L2A_B02_(Raw).tiff  2024-12-16-00:00_2024-12-16-23:59_Sentinel-2_L2A_B03_(Raw).tiff  2024-12-16-00:00_2024-12-16-23:59_Sentinel-2_L2A_B04_(Raw).tiff  2024-12-16-00:00_2024-12-16-23:59_Sentinel-2_L2A_B05_(Raw).tiff  2024-12-16-00:00_2024-12-16-23:59_Sentinel-2_L2A_B06_(Raw).tiff  2024-12-16-00:00_2024-12-16-23:59_Sentinel-2_L2A_B07_(Raw).tiff  2024-12-16-00:00_2024-12-16-23:59_Sentinel-2_L2A_B08_(Raw).tiff  2024-12-16-00:00_2024-12-16-23:59_Sentinel-2_L2A_B09_(Raw).tiff  2024-12-16-00:00_2024-12-16-23:59_Sentinel-2_L2A_B11_(Raw).tiff  2024-12-16-00:00_2024-12-16-23:59_Sentinel-2_L2A_B12_(Raw).tiff  2024-12-16-00:00_2024-12-16-23:59_Sentinel-2_L2A_B8A_(Raw).tiff
analysis/data/2025-01-28-00_00_2025-01-28-23_59_Sentinel-2_L2A/: 2025-01-28-00:00_2025-01-28-23:59_Sentinel-2_L2A_B01_(Raw).tiff  2025-01-28-00:00_2025-01-28-23:59_Sentinel-2_L2A_B02_(Raw).tiff  2025-01-28-00:00_2025-01-28-23:59_Sentinel-2_L2A_B03_(Raw).tiff  2025-01-28-00:00_2025-01-28-23:59_Sentinel-2_L2A_B04_(Raw).tiff  2025-01-28-00:00_2025-01-28-23:59_Sentinel-2_L2A_B05_(Raw).tiff  2025-01-28-00:00_2025-01-28-23:59_Sentinel-2_L2A_B06_(Raw).tiff  2025-01-28-00:00_2025-01-28-23:59_Sentinel-2_L2A_B07_(Raw).tiff  2025-01-28-00:00_2025-01-28-23:59_Sentinel-2_L2A_B08_(Raw).tiff  2025-01-28-00:00_2025-01-28-23:59_Sentinel-2_L2A_B09_(Raw).tiff  2025-01-28-00:00_2025-01-28-23:59_Sentinel-2_L2A_B11_(Raw).tiff  2025-01-28-00:00_2025-01-28-23:59_Sentinel-2_L2A_B12_(Raw).tiff  2025-01-28-00:00_2025-01-28-23:59_Sentinel-2_L2A_B8A_(Raw).tiff
analysis/data/2025-02-14-00_00_2025-02-14-23_59_Sentinel-2_L2A/: 2025-02-14-00:00_2025-02-14-23:59_Sentinel-2_L2A_B01_(Raw).tiff  2025-02-14-00:00_2025-02-14-23:59_Sentinel-2_L2A_B02_(Raw).tiff  2025-02-14-00:00_2025-02-14-23:59_Sentinel-2_L2A_B03_(Raw).tiff  2025-02-14-00:00_2025-02-14-23:59_Sentinel-2_L2A_B04_(Raw).tiff  2025-02-14-00:00_2025-02-14-23:59_Sentinel-2_L2A_B05_(Raw).tiff  2025-02-14-00:00_2025-02-14-23:59_Sentinel-2_L2A_B06_(Raw).tiff  (+6 more)
analysis/notebooks/: 01_sentinel2_visualization.ipynb
src/mimosa/: __init__.py  composite.py  constants.py  data.py
tests/: test_composite.py  test_constants.py  test_data.py
(+24 files in other folders)
