[project]
name = "mimosa"
version = "0.1.0"
description = "Satellite imagery analysis tools for detecting Acacia dealbata (mimosa) using Sentinel-2 data"
authors = [
    { name = "Simon Keith", email = "simon.keith@shippeo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "rasterio>=1.5.0",
    "plotly>=5.24.1",
    "ipywidgets>=8.1.5",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "PD", "NPY", "B", "C4", "SIM", "RET", "ARG",
    "PERF", "FURB", "ERA", "I", "UP", "N", "D", "ANN", "S", "BLE",
    "RSE", "A", "DTZ", "PTH", "G", "PT", "RUF"
]
ignore = ["D203", "D213", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN", "S101"]
"analysis/**" = ["D", "BLE", "G", "ANN", "ARG", "A"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
ignore_missing_imports = true
exclude_gitignore = true

[tool.pytest.ini_options]
addopts = "-v --cov=src/mimosa --cov-report=html"
markers = [
    "integration: marks tests as integration tests (requires data files)",
]
